* Jun 28 2001 hship

Rewrite the template parser to not use GNU Regexp library and perform
more powerful parsing.
Remove the first and last parameters and properties from the Foreach component.
Remove lib/gnu-regexp.jar.
Add lib/junit.jar.
Add a suite of junit tests.
Distribute the WAP hello-world example in the full distribution.

* Jun 25 2001 hship

framework:
- Change the way the Body component preloads images to work properly with
  text-only browsers.
- fix conflict between ApplicationRuntimeException and 
- RollbackException concerning the rootCause property (duplicated 
  in RollbackException, which confused ExceptionAnalyzer).
- Add package.html files to all directories.
- Other Javadoc related changes.

contrib:
- Improve the Palette component to use images for the buttons

[ #435331 ] add index binding to Foreach
[ #436219 ] Back out #431137 

* Jun 21 2001 hship

Improve toString() methods of key classes.

[ #434615 ] NumericField minimum binding typo
[ #434582 ] session tracking / multiple servlets

* Jun 20 2001 hship

[ #434855 ] SimplePageRecorder failure w/ EJBs

* Jun 19 2001 hship

Include the web directory in the full distribution.
Convert ExceptionAnalyzer to not use the GNU Regexp framework.

[ #434570 ] direct service for forms
[ #434578 ] double logging

* Jun 18 2001 hship

Put in provisional support for deploying on the Intranet.

* Jun 18 2001 hship

Add a chapter to the developer's guide on the Tapestry Script documents.

* Jun 15 2001 hship

Framework:
- Change how form element ids are generated.  They will now usually
  match the component id, with a numeric suffix to ensure uniqueness.
- Change how the Body component deals with preloaded images to work
  better when the same image is used repeatedly.
  
Contrib:
- Get basic manual ordering working in Palette component.
  
* Jun 15 2001 hship

Create contrib project (net.sf.tapestry.contrib.jar).
Create Palette component (not complete).
Update Tutorial to make use of the Palette.